app/eclaim-back.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: eclaim-backend
      containers:
      - name: backend
        image: lib.matador.ais.co.th/bsstrans/bpam/apps/eclaim-backend:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
            - containerPort: 8080
              protocol: TCP
